[package]
name = "steamstreaming"
version = "0.1.0"
authors = ["Ted Mielczarek <ted@mielczarek.org>"]
license = "MIT"

[dependencies]
error-chain = "0.10.0"
openssl = { git = "https://github.com/luser/rust-openssl", branch = "psk" }
protobuf = "1.2.2"
rand = "0.3.15"
rustc-serialize = "^0.3"
#futures = "0.1.13"
#tokio-core = "0.1.7"
